dark mode on achievements page fixed

--- a/public/stylesheets/achievements.css
+++ b/public/stylesheets/achievements.css
@@ -17,7 +17,7 @@
     align-items: center;
     text-align: center;
     border-radius: 30px;
-    border-color: black;
+    border-color: var(--buttonborder-color);
     margin-top: 20px;
     border-width: 3px;
     border-style: solid;
@@ -32,10 +32,10 @@
     align-items: center;
     text-align: center;
     border-radius: 30px;
-    border-color: black;
+    border-color: var(--buttonborder-color);
     margin-top: 20px;
     border-width: 3px;
     border-style: solid;
-    background-color: white;
+    background-color: var(--button-color);
 }
 
